# homebrew-unf

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  build.rs  justfile
.github/workflows/: ci.yml  release.yml  staging.yml
Casks/: unfudged-staging.rb  unfudged.rb
Formula/: unf-staging.rb  unf.rb
app/: Cargo.toml  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: error.rs  lib.rs  main.rs  state.rs
app/src/commands/: config.rs  content.rs  daemon.rs  diff.rs  history.rs  mod.rs  project.rs  unf.rs
app/ui/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/ui/src/: App.svelte
app/ui/src/components/: ContextualDiffView.svelte  FileTimeline.svelte  FilterAutocomplete.svelte  HistogramRange.svelte  SettingsPopover.svelte  Toast.svelte  TopBar.svelte
app/ui/src/lib/: api.ts  data-loader.ts  diff-helpers.ts  filterUtils.ts  fonts.css  highlight.ts  keyboard.ts  language-map.ts  layout.css  polling.ts  rangeSelection.ts  reset.css  stores.ts  timeFormat.ts  types.ts  word-diff.ts
app/ui/src/lib/__tests__/: rangeSelection.test.ts
packaging/: entitlements.plist
packaging/debian/: control
packaging/homebrew/: unf-staging.rb  unf.rb  unfudged-staging.rb  unfudged.rb
scripts/: download-stats.sh  generate-icons.py  set-version.sh  test-workflow-push.sh  uninstall.sh
src/: audit.rs  autostart.rs  config.rs  diff.rs  error.rs  intent.rs  lib.rs  main.rs  process.rs  registry.rs  sentinel.rs  storage.rs  types.rs
src/cli/: boot.rs  cat.rs  config.rs  diff.rs  filter.rs  init.rs  list.rs  log.rs  migrate.rs  mod.rs  output.rs  prune.rs  recap.rs  restart.rs  restore.rs  session.rs  status.rs  stop.rs  unwatch.rs  watch.rs
src/engine/: cas.rs  db.rs  mod.rs
src/help/: cat.txt  config.txt  diff.txt  list.txt  log.txt  main.txt  prune.txt  recap.txt  restore.txt
src/watcher/: daemon.rs  debounce.rs  filter.rs  mod.rs
tests/: daemon_integration.rs  integration.rs  load_test.rs  migration_test.rs  resource_leak.rs
tests/common/: mod.rs
tests/e2e/: .gitignore  Dockerfile.e2e  Dockerfile.e2e-source  app-test.spec.ts  helpers.ts  package.json  run-linux.sh  run-mac.sh  setup-tauri-driver.sh  smoke-test.sh  (+2 more)
(+18 files in other folders)
