[package]
name = "unfudged-app"
version = "0.18.4"
edition = "2021"
description = "UNFUDGED Time-Travel Desktop App"
license = "MIT OR Apache-2.0"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
